# Real-Time-Transaction-Streaming-Alerting-with-Kafka-and-Spark

./: .env.example  .gitignore  Makefile  README.md  databricks.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  databricks-deploy.yml  integration-tests.yml
config/: kafka_config.example.yml  kafka_config.yml  snowflake_config.example.yml  streaming_job_config.example.yml
databricks/notebooks/: 01_bronze_from_kafka.py  02_silver_enrichment_and_flags.py  03_load_to_snowflake_batch.py
databricks/utils/: logging_utils.py
docs/: architecture.md  data_contracts.md
infra/: kafka-docker-compose.yml
pipeline/: __init__.py  bronze_ingestion.py  config.py  gold_reconciliation.py  observability.py  silver_dedup.py  snowflake_writer.py
producer/: payments_producer.py  requirements.txt  settlement_producer.py  transaction_producer.py
quality/expectations/bronze/: bronze_suite.py
quality/expectations/gold/: gold_suite.py
quality/expectations/silver/: silver_suite.py
schemas/: settlement_event.avsc  transaction_event.avsc
scripts/: register_schemas.py  setup_snowflake.py
snowflake/: ddl.sql  ddl_fact_and_dim.sql  rbac.sql
tests/: conftest.py  test_business_rules.py
tests/integration/: test_kafka_pipeline.py
tests/unit/: test_config.py  test_observability.py  test_producer_simulation.py  test_reconciliation_logic.py  test_silver_dedup.py
