[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "merchant-reconciliation-platform"
version = "1.0.0"
description = "Real-Time Merchant Revenue Reconciliation & Anomaly Detection Platform"
requires-python = ">=3.9"
dependencies = [
    # Kafka / Schema Registry
    "confluent-kafka[avro]>=2.3.0",
    "fastavro>=1.9.0",
    "requests>=2.31.0",

    # Spark / Delta (runtime provided by Databricks; pinned here for local tests)
    "pyspark==3.5.1",
    "delta-spark==3.1.0",

    # Snowflake
    "snowflake-connector-python>=3.6.0",
    "snowflake-sqlalchemy>=1.5.0",

    # Config / validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # Data quality
    "great-expectations>=0.18.0",

    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",

    # Utilities
    "tenacity>=8.2.0",
    "pyarrow>=15.0.0",
]

# Entry points used by databricks.yml python_wheel_task
# Databricks resolves "entry_point: bronze_ingestion" to this console script.
[project.scripts]
bronze_ingestion   = "pipeline.bronze_ingestion:main"
silver_dedup       = "pipeline.silver_dedup:main"
gold_reconciliation = "pipeline.gold_reconciliation:main"
snowflake_writer   = "pipeline.snowflake_writer:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "testcontainers[kafka]>=4.4.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
exclude = ["tests/integration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
addopts = "-v --tb=short"
markers = [
    "unit: fast, no external dependencies",
    "integration: requires Docker / testcontainers",
]
